Se resuelve Kata 10